Expose UI for --disable-accelerated-video-decode on Andorid.

BUG=674491

Review-Url: https://codereview.chromium.org/2592813005
Cr-Commit-Position: refs/heads/master@{#440233}

Former-commit-id: 49e9c1bb2d80e313eecd890d91c5db53901e0e22